@@ -2724,13 +2724,27 @@ argument_list|,
 literal|"10"
 argument_list|)
 expr_stmt|;
+specifier|final
+name|String
+name|field
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+literal|"t_text"
+else|:
+literal|"tv_text"
+decl_stmt|;
 name|args
 operator|.
 name|put
 argument_list|(
 literal|"hl.fl"
 argument_list|,
-literal|"t_text"
+name|field
 argument_list|)
 expr_stmt|;
 name|TestHarness
@@ -2755,7 +2769,7 @@ name|assertU
 argument_list|(
 name|adoc
 argument_list|(
-literal|"t_text"
+name|field
 argument_list|,
 name|LONG_TEXT
 argument_list|,
@@ -2771,12 +2785,6 @@ name|commit
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|assertU
-argument_list|(
-name|optimize
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|assertQ
 argument_list|(
 literal|"token at start of text"
@@ -2785,7 +2793,9 @@ name|sumLRF
 operator|.
 name|makeRequest
 argument_list|(
-literal|"t_text:disjoint"
+name|field
+operator|+
+literal|":disjoint"
 argument_list|)
 argument_list|,
 literal|"//lst[@name='highlighting']/lst[@name='1']"
@@ -2825,7 +2835,9 @@ name|sumLRF
 operator|.
 name|makeRequest
 argument_list|(
-literal|"t_text:disjoint"
+name|field
+operator|+
+literal|":disjoint"
 argument_list|)
 argument_list|,
 literal|"//lst[@name='highlighting']/lst[@name='1']"
@@ -2865,12 +2877,107 @@ name|sumLRF
 operator|.
 name|makeRequest
 argument_list|(
-literal|"t_text:disjoint"
+name|field
+operator|+
+literal|":disjoint"
 argument_list|)
 argument_list|,
 literal|"//lst[@name='highlighting']/lst[@name='1']"
 argument_list|,
 literal|"//lst[@name='1']/arr[count(str)=1]"
+argument_list|)
+expr_stmt|;
+block|}
+comment|// Test multi-valued together with hl.maxAnalyzedChars
+annotation|@
+name|Test
+DECL|method|testMultiValuedMaxAnalyzedChars
+specifier|public
+name|void
+name|testMultiValuedMaxAnalyzedChars
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|shortText
+init|=
+literal|"some short blah blah blah blah"
+decl_stmt|;
+specifier|final
+name|String
+name|field
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+literal|"tv_mv_text"
+else|:
+literal|"textgap"
+decl_stmt|;
+comment|// term vecs or not
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+name|field
+argument_list|,
+name|shortText
+argument_list|,
+name|field
+argument_list|,
+name|LONG_TEXT
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+name|field
+operator|+
+literal|":(short OR long)"
+argument_list|,
+literal|"indent"
+argument_list|,
+literal|"on"
+argument_list|,
+literal|"hl"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"hl.fl"
+argument_list|,
+name|field
+argument_list|,
+literal|"hl.snippets"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"hl.maxAnalyzedChars"
+argument_list|,
+literal|"8"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='highlighting']/lst[@name='1']/arr[count(*)=1]"
+argument_list|,
+literal|"//lst[@name='1']/arr/str[1][.='some<em>short</em>']"
+comment|//"//lst[@name='1']/arr/str[2][.='a<em>long</em> days']"
 argument_list|)
 expr_stmt|;
 block|}
